--- a/style.css
+++ b/style.css
@@ -34,8 +34,7 @@
             text-decoration: none;
             margin-right: 20px;
             font-size: 20px;
-            border-right: 1px skyblue 
-            padding-right 20px;
+            border-right: 1px skyblue padding-right 20px;
         }
 
         img {
